--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "mqtt-hue-bridge",
     "description": "This NodeJS application listens to MQTT messages and transforms them into Philips Hue API calls",
-    "author": "iomax"
+    "author": "iomax",
     "license": "MIT",
     "version": "1.0.1",
     "dependencies": {
         "mqtt": "^1.1",
-        "node-hue-api": "^1.0"
+        "node-hue-api": "^2.4"
     },
     "repository": {
         "type": "git",
